# MPSU

./: CMakeLists.txt  LICENSE  README.md
circuit/: Circuit.cpp  Circuit.h  TripleGen.cpp  TripleGen.h
common/: Defines.h  util.cpp  util.h
lowMC/: LowMC.cpp  LowMC.h  lowmcDecGmw.cpp  lowmcDecGmw.h  parameter.h
mpso/: MPSI.cpp  MPSI.h  MPSU.cpp  MPSU.h  main.cpp  mqssPMT.cpp  mqssPMT.h  ssVODM.cpp  ssVODM.h
shuffle/: MShuffle.cpp  MShuffle.h  ShareCorrelationGen.cpp  ShareCorrelationGen.h
test/: Beaver_test.cpp
